--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,19 @@
-.App {
-  text-align: center;
+
+.navbar a{
+  text-decoration: none;
+  transition: .2s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar .navbar-brand a{
+  color:#DCDCDC;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar .nav-link a{
+  color: #A0A0A0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar .nav-link a:hover {
+  color: #c5c3c3;
 }
 
 .pageAbout{
@@ -59,3 +38,54 @@
 	gap: 10px;
 	margin: 10px 0;
 }
+
+.loadin{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 61px;
+}
+
+.card{
+  width: 100%;
+}
+
+.card-image{
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 300px;
+}
+
+.photos-list-item{
+  width: 120px;
+  height: 120px;
+  position: relative;
+}
+
+
+.photos-list-item-delete{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  bottom: 0px;
+  right: 0px;
+  background-color: rgba(247, 59, 59, 0.707);
+  border-radius: 5px 5px 0 5px;
+  cursor: pointer;
+}
+
+.photos-list-item-photo{
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+
