--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 300px;
+  height: 600px;
 }
 
 .photos-list-item{
@@ -99,4 +99,9 @@ ul li h6 a{
 
 ul li h6 a:hover{
   color: rgba(0, 0, 0, 0.596);
+}
+
+.home-page-title{
+  font-weight: bold;
+  font-size: 20px;
 }
